[gd_scene load_steps=8 format=3 uid="uid://cadl0mvdnces8"]

[ext_resource type="Script" path="res://scenes/game/systems/powers/splash.gd" id="1_0yqiu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rqqki"]
radius = 138.014

[sub_resource type="Gradient" id="Gradient_1muja"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.0884354, 0.217687, 0.370748, 0.5, 0.744898, 0.911565, 1)
colors = PackedColorArray(0.489622, 0.489622, 0.489622, 1, 0.336608, 0.336608, 0.336608, 1, 0.489624, 0.489622, 0.489621, 1, 0.415982, 0.41598, 0.41598, 1, 0.481789, 0.48179, 0.481789, 1, 0.340329, 0.340345, 0.340329, 0.0507222, 1, 1, 1, 0, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_o7jry"]
gradient = SubResource("Gradient_1muja")
width = 300
height = 300
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Animation" id="Animation_8xuyh"]
resource_name = "beggin"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.405, 0.405), Vector2(1, 1), Vector2(0.785, 0.785), Vector2(1, 1), Vector2(0.895, 0.895), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_vvn1t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gjtqn"]
_data = {
"RESET": SubResource("Animation_vvn1t"),
"beggin": SubResource("Animation_8xuyh")
}

[node name="Splash" type="Area2D"]
modulate = Color(0.67451, 0.87451, 0.0705882, 1)
z_index = 1
collision_layer = 2
collision_mask = 4
script = ExtResource("1_0yqiu")
time_to_die = 6.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rqqki")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.431373, 0.431373, 0.431373, 1)
z_index = -1
texture = SubResource("GradientTexture2D_o7jry")

[node name="TimerToHit" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="TimerToDie" type="Timer" parent="."]
wait_time = 7.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gjtqn")
}

[connection signal="timeout" from="TimerToHit" to="." method="_on_timer_to_hit_timeout"]
[connection signal="timeout" from="TimerToDie" to="." method="_on_timer_to_die_timeout"]
